k8s-yamls/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      serviceAccountName: db-sa
      containers:
        - name: db-container
          image: localhost:32000/db:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: db-persistent-storage
              mountPath: /data/db
      volumes:
        - name: db-persistent-storage
          persistentVolumeClaim:
            claimName: db-pvc
