k8s-yamls/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      nodePort: 30001
      port: 8080
      targetPort: 8080
  selector:
    app: server
